force-app/main/default/objects/External_Reference_Register__c/External_Reference_Register__c.object-meta.xml
<CustomObject>
    <description>This object is to be used to prevent IDOR while generating and managing links to the internal documents to be shared over the public/guest user sites.</description>
    <label>External Reference Register</label>
    <nameField>
        <displayFormat>ERR #{0}</displayFormat>
        <label>External Reference Register Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Reference Registers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>