force-app/main/default/objects/External_Reference_Register__c/fields/Encryption_Key__c.field-meta.xml
<CustomField>
    <fullName>Encryption_Key__c</fullName>
    <description>Stores the Encryption Key used to generated external reference</description>
    <label>Encryption Key</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>