force-app/main/default/objects/External_Reference_Register__c/fields/Entry_Creation_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Entry_Creation_DateTime__c</fullName>
    <label>Entry Creation DateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>