force-app/main/default/objects/External_Reference_Register__c/fields/External_Reference__c.field-meta.xml
<CustomField>
    <fullName>External_Reference__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Saves the External/Public/Guest reference</description>
    <label>External Reference</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>